<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">
    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.bangkit.batikdiscover.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />
    <fragment
        android:id="@+id/navigation_community"
        android:name="com.bangkit.batikdiscover.ui.community.CommunityFragment"
        android:label="@string/title_comunity" />
    <fragment
        android:id="@+id/navigation_product"
        android:name="com.bangkit.batikdiscover.ui.product.ProductFragment"
        android:label="@string/title_product"
        tools:layout="@layout/fragment_product" />


    <fragment
        android:id="@+id/navigation_scan"
        android:name="com.bangkit.batikdiscover.ui.scan.ScanFragment"
        android:label="@string/title_scan" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.bangkit.batikdiscover.ui.profile.ProfileFragment"
        android:label="@string/title_profile" />


    <fragment
        android:id="@+id/navigation_artikel"
        android:name="com.bangkit.batikdiscover.ui.article.ArticleFragment"
        android:label="@string/article"
        tools:layout="@layout/fragment_article" />
    <fragment
        android:id="@+id/navigtaion_events"
        android:name="com.bangkit.batikdiscover.ui.event.EventFragment"
        android:label="@string/events"
        tools:layout="@layout/fragment_event" />
    <fragment
        android:id="@+id/navigation_scan_detail"
        android:name="com.bangkit.batikdiscover.ui.scan.DetailScanFragment"
        android:label="@string/scan_detail"
        tools:layout="@layout/fragment_result_scan" />
    <fragment
        android:id="@+id/navigation_product_detail"
        android:name="com.bangkit.batikdiscover.ui.product.ProductDetailFragment"
        android:label="@string/product_detail"
        tools:layout="@layout/fragment_product_detail" />
</navigation>