<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="239dp"
            android:layout_height="222dp"
            android:layout_marginTop="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_add_img" />

        <Button
            android:id="@+id/btn_kamera"
            android:layout_width="317dp"
            android:layout_height="44dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/login_rounded"
            android:text="@string/scan"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_gallery" />

        <Button
            android:id="@+id/btn_scan_now"
            android:layout_width="317dp"
            android:layout_height="44dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/login_rounded"
            android:text="@string/scan_now"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_kamera" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="317dp"
            android:layout_height="28dp"
            android:layout_marginTop="28dp"
            android:text="@string/description_img"
            android:textAlignment="center"
            android:textSize="16dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <Button
            android:id="@+id/btn_gallery"
            android:layout_width="317dp"
            android:layout_height="44dp"
            android:layout_marginTop="44dp"
            android:background="@drawable/login_rounded"
            android:text="@string/gallery"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
